refresh tools and versions